Add auto-refresh via Websockets (WIP)

--- a/views/timetable.pug
+++ b/views/timetable.pug
@@ -1,5 +1,8 @@
+doctype html
 html
     head
         title=title
+        script(src='/socket.io/socket.io.js')
+        script(src='/js/app.js')
     body
         #results!=body
