Make auto refresh actually work.

--- a/views/timetable.pug
+++ b/views/timetable.pug
@@ -5,4 +5,5 @@ html
         script(src='/socket.io/socket.io.js')
         script(src='/js/app.js')
     body
+        h1=title
         #results!=body
