--- a/views/timetable.pug
+++ b/views/timetable.pug
@@ -1,6 +1,7 @@
 doctype html
 html
     head
+        meta(charset='utf8')
         title=title
         script(src='/socket.io/socket.io.js')
         script(src='/js/app.js')
