--- a/views/timetable.pug
+++ b/views/timetable.pug
@@ -3,6 +3,7 @@ html
     head
         meta(charset='utf8')
         title=title
+        link(rel="stylesheet", href="/css/styles.css")
         script(src='/socket.io/socket.io.js')
         script(src='/js/app.js')
     body
